<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="desc_app">Share your activities with friends</string>
    <string name="question">Don\'t have an account?</string>
    <string name="link_register">Register</string>
    <string name="title">Welcome!</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="email_warning">Wrong your email format</string>
    <string name="name_warning">Your name can\'t be empty</string>
    <string name="login_warning">Complete your data</string>
    <string name="image_login">Login illustration</string>
    <string name="hint_name">Name</string>
    <string name="tv_signup">Sign Up</string>
    <string name="question2">Do you have an account?</string>
    <string name="add_story">Add Story</string>
    <string name="setting_language">Setting language</string>
    <string name="menu_logout">Logout</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Email address or password that doesn\'t match any account. Sign up for create account</string>
    <string name="register_success">Registration Successful</string>
    <string name="register_fail">Registration Failed. Please Try Again</string>
    <string name="email_user">Email User</string>
    <string name="success_load_stories">Loading Complete</string>
    <string name="fail_load_stories">Loading Failed</string>
    <string name="description">Description</string>
    <string name="story_picture">Story Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">UPLOAD</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="upload_success">Upload Successful</string>
    <string name="upload_fail">Upload failed. Please complete your data</string>
    <string name="fail_take_picture">Take Picture Failed</string>
    <string name="fail_show_camera">Show Camera Failed</string>
    <string name="description_warning">Fill this column</string>
    <string name="desc_warning">Complete the column</string>
</resources>