<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.story.DetailStoryActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_photo_detail"
                android:layout_width="255dp"
                android:layout_height="150dp"
                android:layout_marginTop="42dp"
                android:contentDescription="@string/story_picture"
                android:src="@drawable/ic_baseline_picture"
                android:transitionName="img_photo_detail_transition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/img_photo_detail"
                app:layout_constraintStart_toStartOf="@+id/img_photo_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/grey_2"
                android:textSize="32sp"
                android:transitionName="tv_name_detail_transition"
                app:layout_constraintEnd_toEndOf="@+id/img_photo_detail"
                app:layout_constraintStart_toStartOf="@+id/img_photo_detail"
                app:layout_constraintTop_toBottomOf="@+id/img_photo_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>